# Configs

./: .gitignore  README.md  alacritty.yml  displayctl  justfile  starship.toml  topgrade.toml
bat/: config
broot/: conf.hjson
broot/skins/: kanagawa.hjson
deadd/: deadd.conf  deadd.css
dunst/: dunstrc
fish/: config.fish
git/: config
helix/: config.toml  languages.toml
kak/: kakrc
kitty/: Monokai_Pro.conf  config.conf  exp.conf  exp2.conf  kanagawa.conf  keybind.conf  kitty.conf  logs.conf  mousebind.conf  sim.conf  sim2.conf  tasks.lua  thesis.conf  tokyonight_night.conf
lazygit/: config.yml
nvim/: init.lua  init.vim  lazy-lock.json  package.json
nvim/after/ftplugin/: tex.lua
nvim/after/plugin/: luasnip.lua  luasnip.lua.bak
nvim/filetype/julia/: benchmark  docBuild  docTest  docTestUpdate  func_docstring.txt  precompile  prof.jl  profAllocBench.jl  profBench  profBench.jl  runExample  task_compileenv.jl  task_docserve.jl  task_test.jl  test  testCov
nvim/ftplugin/: asm.lua  c.lua  haskell.lua  julia.lua  julia.vim  lua.lua  lua.vim  markdown.lua  markdown.vim  python.lua  rust.lua  tex.lua
nvim/lua/: bindings_config.lua  bubble.lua  command_config.lua  compleation_config.lua  config_bindings.lua  config_compleation.lua  config_git.lua  config_lsp.lua  config_main.lua  config_panels.lua  config_snippets.lua  config_telescope.lua  config_treesitter.lua  config_ui.lua  dap_config.lua  filmpicker_config.lua  git_config.lua  i_bindings_config.lua  jump_config.lua  lsp_config.lua  main_config.lua  mappings_config.lua  mini_config.lua  misc_config.lua  myfuncs_config.lua  n_bindings_config.lua  o_bindings_config.lua  panels_config.lua  projects_config.lua  settings_config.lua  snippets_config.lua  statusline_config.lua  tabline_config.lua  telescope_config.lua  terminal_config.lua  treesitter_config.lua  ui_config.lua  visual-multi.lua  winbar_config.lua  x_bindings_config.lua
nvim/lua/config/: autocmds.lua  commands.lua  keymaps.lua  options.lua
nvim/lua/neotest-julia/: init.lua  juliaTestRunner
nvim/lua/neotest-julia-benchmarktools/: init.lua  juliaBenchmarkClient.jl  juliaBenchmarkRunner
nvim/lua/neotest-julia-retest/: init.lua  juliaTestClient.jl  juliaTestRunner
nvim/lua/plugins/: auto-save.lua  cmp.lua  commander.lua  conform.lua  coverage.lua  dap.lua  dap_view.lua  dial.lua  dropbar.lua  edgy.lua  flash.lua  genghis.lua  hover.lua  incline.lua  inlayhint-filler.lua  lang.lua  lsp.lua  (+23 more)
nvim/snippets/: julia.json  julia.lua  lua.lua  markdown.lua  python.lua  tex.json  tex.lua
picom/: picom.conf
rofi/themes/: gruvbox-dark.rasi
vifm/: vifmrc
vis/: visrc.lua
xmobar/: init-xmobars  stack.yaml  xmobar.conf  xmobar0.conf  xmobar1.conf  xmobar2.conf  xmobar3.conf  xmobarLaunch
xmonad/: cabal.project  hie.json  stack.yaml  tasks.lua  xmonad-exe.cabal  xmonad.hs
xmonad/xmonad-oleete/: xmonad-oleete.cabal
xmonad/xmonad-oleete/XMonad/Actions/: ConditionalKeys.hs  CycleWSLocal.hs  DynamicProjectsLocal.hs  ProfilesLocal.hs  WindowGoLocal.hs
xmonad/xmonad-oleete/XMonad/Hooks/: DynamicProperty.hs
xmonad/xmonad-oleete/XMonad/Layout/: CenterFocus.hs  FourColumns.hs  Notebook.hs  Paper.hs  PaperPersistent.hs  SimpleFocus.hs  SpacedMaster.hs  TabbedGeometryLocal.hs  TwoPanePersistentLocal.hs
xmonad/xmonad-oleete/XMonad/Util/: NamedScratchpadLocal.hs
zathura/: zathurarc
zellij/: config.kdl
(+234 files in other folders)
