cabal-version:      2.4
name:               xmonad-oleete
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  XMonad.Layout.Notebook
                      XMonad.Layout.PaperPersistent
                      XMonad.Layout.TwoPanePersistentLocal
                      XMonad.Layout.TabbedGeometryLocal
                      XMonad.Actions.WindowGoLocal
                      XMonad.Actions.CycleWSLocal
                      XMonad.Actions.DynamicProjectsLocal
                      XMonad.Actions.ProfilesLocal
                      XMonad.Util.NamedScratchpadLocal

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      xmonad >= 0.15,
                      xmonad-contrib >= 0.15,
                      X11>=1.6.1 && < 1.11,
                      containers >= 0.5 && < 0.7,
                      directory,
                      deepseq,

    hs-source-dirs:   .
    default-language: Haskell2010
